<resources>
    <!-- Existing strings -->
    <string name="app_name">Home1</string>
    <string name="title_home">홈</string>
    <string name="title_chat">프로필</string>
    <string name="title_dashboard">커뮤니티</string>
    <string name="title_notifications">프로필</string>



    <!-- fragment_mypage.xml -->
    <string name="welcome_mypage">Welcome to MyPage</string>

    <!--  -->
    <string name="nickname">곽두팔75 </string>
    <string name="nickname_title">Nickname </string>
    <string name="email_title">Email </string>
    <string name="email_text">homethru@konyang.ac.kr </string>
    <string name="edit_profile">프로필 편집</string>
    <string name="recentSeenProduct">더보기</string>
    <string name="recentSeenProduct_title">최근 본 상품</string>
    <string name="scroll">스크롤뷰</string>
    <string name="writing_button">작성한 글  〉</string>
    <string name="exchangeList_button">거래 목록  〉</string>
    <string name="service">고객 센터  〉</string>
    <string name="logout_button">로그아웃</string>
    <string name="deleteUser_button">회원 탈퇴</string>
    <string name="user_image_description">사용자 프로필 이미지</string>
    <string name="help">사용자를 위한 탭 및 지원</string>
    <string name="account">계정</string>

    <!-- for_customer.xml -->
    <string name="question_button">1:1 문의</string>
    <string name="report_button">신고</string>

    <!-- onebyone_inquiry.xml -->
    <string name="inquiry_text">문의 내용</string>

    <!-- edit_inquiry.xml -->
    <string name="inquiry_Images">Inquiry Image</string>
    <string name="edit_images">기존 게시물 사진</string>
    <string name="edit_text">기존 게시물 내용</string>
    <string name="input_text">내용을 입력하세요</string>

    <!-- trade_list.xml -->
    <string name="recently_trade">최근 거래 목록</string>

    <!-- dialog_inquiry.xml -->
    <string name="inquiry_title">문의 사진</string>
    <string name="inquiry_images_description">inquiry_images_description</string>
    <string name="inquiry_content">문의 내용</string>
    <string name="inquiry_hint">문의 내용을 작성해 주세요.</string>
    <string name="button_save">저장</string>

    <!-- faq_child.xml -->
    <string name="answer">answer</string>

    <!-- editor.xml -->
    <string name="Information">Information</string>
    <string name="ImageTitle">이미지 수정</string>
    <string name="button_description">profile_image</string>
    <string name="nameTitle">이름</string>
    <string name="nameHint">name</string>
    <string name="emailTitle">이메일</string>
    <string name="emailHint">email</string>
    <string name="PnumberTitle">전화번호</string>
    <string name="PnumberHint">phoneNumber</string>
    <string name="pwTitle">비밀번호</string>
    <string name="pwHint">password</string>

    <!-- Descriptions and Titles -->
    <string name="banner_image_desc">Banner Image Description</string>
    <string name="banner_content_title">Banner Content</string>

    <!-- Image Descriptions -->
    <string name="button1_desc">이미지 1의 설명</string>
    <string name="button2_desc">이미지 2의 설명</string>
    <string name="button3_desc">이미지 3의 설명</string>
    <string name="button4_desc">이미지 4의 설명</string>
    <string name="button5_desc">이미지 5의 설명</string>
    <string name="button6_desc">이미지 6의 설명</string>
    <string name="button7_desc">이미지 7의 설명</string>
    <string name="button8_desc">이미지 8의 설명</string>
    <string name="button9_desc">이미지 9의 설명</string>
    <string name="button11_desc">이미지 11의 설명</string>
    <string name="button12_desc">이미지 12의 설명</string>
    <string name="button13_desc">이미지 13의 설명</string>
    <string name="button14_desc">이미지 14의 설명</string>



    <!-- Write Post Activity -->
    <string name="write_post_title">글을 작성하세요</string>

    <!-- New Activity Titles -->
    <string name="banner_content_activity_label">베너</string>
    <string name="write_post_activity_label">글쓰기</string>
    <string name="recent_items_activity_label">최근상품</string>

    <!-- New Strings for Layout -->
    <string name="recent_items_title">최근상품</string>
    <string name="item1_desc">Item 1 Description</string>
    <string name="item2_desc">Item 2 Description</string>
    <string name="item3_desc">Item 3 Description</string>
    <string name="item4_desc">Item 4 Description</string>

    <!-- New Strings for Accessibility -->
    <string name="back_button_desc">뒤로가기 버튼</string>
    <string name="home_button_desc">홈 버튼</string>
    <string name="recent_button_desc">최근상품 버튼</string>

    <!-- Add the new strings for toolbar button -->
    <string name="toolbar_button_desc">툴바 버튼</string>
    <string name="fab_edit_desc">Edit</string>

    <string name="item_detail_activity_label">상품 상세 정보</string>

    <!-- Additional Accessibility Descriptions -->
    <string name="item_image_desc">Item image</string>
    <string name="default_item_image_desc">Default item image</string>

    <!-- Floating Action Button Descriptions -->
    <string name="fab_add_item_desc">아이템 추가</string>
    <string name="fab_delete_item_desc">아이템 삭제</string>

    <!-- Report Activity Strings -->
    <string name="report_reason_prompt">신고 사유를 선택하세요</string>
    <string name="report_option_1">부적절한 내용</string>
    <string name="report_option_2">스팸</string>
    <string name="report_option_3">허위 정보</string>
    <string name="report_option_4">저작권 침해</string>
    <string name="report_option_5">사기</string>
    <string name="report_option_6">혐오 표현</string>
    <string name="report_option_7">개인정보 유출</string>
    <string name="report_option_8">기타</string>
    <string name="submit_report_button_text">신고 제출</string>

    <!-- Error Messages -->
    <string name="error_loading_image">이미지를 로드할 수 없습니다.</string>
    <string name="error_no_item_found">아이템을 찾을 수 없습니다.</string>
    <string name="error_invalid_item_id">유효하지 않은 아이템 ID입니다.</string>

    <!-- Success Messages -->
    <string name="success_item_deleted">아이템이 삭제되었습니다.</string>
    <string name="success_item_added">아이템이 추가되었습니다.</string>

    <string name="dashboard_add_new_post">새로운 포스트 추가</string>
    <string name="title_activity_poll_detail">투표</string>
</resources>


