<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/Title"
            android:textSize="30sp"
            android:text="@string/Information"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLittleGray" />

        <TextView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/ImageTitle"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/button_description"
            android:src="@drawable/ic_photos_black_24dp"
            android:scaleType="centerCrop"
            android:padding="8dp"
            android:layout_marginTop="16dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editName"
            android:textSize="20sp"
            android:text="@string/nameTitle"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/nameHint"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editEmail"
            android:textSize="20sp"
            android:text="@string/emailTitle"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editPNumber"
            android:textSize="20sp"
            android:text="@string/PnumberTitle"/>

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/PnumberHint"
            android:inputType="phone"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editPassword"
            android:textSize="20sp"
            android:text="@string/pwTitle"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/pwHint"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp" />


        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>