<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- ScrollView 콘텐츠 영역 -->
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/navView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 사용자 프로필 섹션 -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <!-- 사용자 이미지 -->
                    <ImageView
                        android:id="@+id/userImage"
                        android:layout_width="80dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/user_image_description"
                        android:src="@drawable/user"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <!-- 닉네임 제목 -->
                    <TextView
                        android:id="@+id/Nickname_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/nickname_title"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/userImage"
                        app:layout_constraintTop_toTopOf="@id/userImage" />

                    <!-- 닉네임 -->
                    <TextView
                        android:id="@+id/Nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nickname"
                        app:layout_constraintStart_toStartOf="@id/Nickname_title"
                        app:layout_constraintTop_toBottomOf="@id/Nickname_title" />

                    <!-- 이메일 제목 -->
                    <TextView
                        android:id="@+id/Email_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/email_title"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/Nickname_title"
                        app:layout_constraintTop_toBottomOf="@id/Nickname" />

                    <!-- 이메일 -->
                    <TextView
                        android:id="@+id/Email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/email_text"
                        app:layout_constraintStart_toEndOf="@id/Email_title"
                        app:layout_constraintTop_toTopOf="@id/Email_title" />

                    <!-- 프로필 수정 버튼 -->
                    <Button
                        android:id="@+id/editor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_profile"
                        android:layout_marginEnd="30dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingEnd="5dp">

                <TextView
                    android:id="@+id/recentSeenProduct_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recentSeenProduct_title"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/recentSeenProduct_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:layout_marginEnd="10dp"
                    android:text="@string/recentSeenProduct" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <HorizontalScrollView
                    android:id="@+id/horizontal_scroll_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fillViewport="true"
                    android:contentDescription="@string/scroll"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recentSeenProduct_button">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/popup_image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:src="@drawable/popup" />

                        <ImageView
                            android:id="@+id/cat_image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:src="@drawable/cattower" />

                        <ImageView
                            android:id="@+id/comic_image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:src="@drawable/comics" />

                        <ImageView
                            android:id="@+id/teddy_image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:src="@drawable/teddy" />
                    </LinearLayout>
                </HorizontalScrollView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/help"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:text="@string/help"
                        android:textColor="@color/colorGray"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorLittleGray" />

                    <!-- 버튼 섹션 -->
                    <Button
                        android:id="@+id/writing_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center|start"
                        android:text="@string/writing_button" />

                    <Button
                        android:id="@+id/exchangeList"
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:gravity="center|start"
                        android:text="@string/exchangeList_button" />

                    <Button
                        android:id="@+id/service"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center|start"
                        android:text="@string/service" />

                    <TextView
                        android:id="@+id/account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/account"
                        android:textColor="@color/colorGray"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorLittleGray" />


                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="parent">


                    <Button
                        android:id="@+id/logout"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/logout_button"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/deleteUser"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:text="@string/deleteUser_button"
                        android:layout_marginEnd="40dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </TableRow>

        </TableLayout>

    </ScrollView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_activity_main"
        android:name="com.example.myapplication.ui.mypage.MyPageFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:navGraph="@navigation/mobile_navigation"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/navView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
